--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -40,7 +40,7 @@ pipeline{
         stage("deployment files"){
             steps{
                 sh """
-                sed -i 's|^ *image:.*|  image: ${DOCKER_IMAGE}:${DOCKER_TAG}|' \
+                sed -i 's|^ *image:.*|  image:attarismail/springboot:${DOCKER_TAG}|' \
                 java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                 """
             }
