--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -39,10 +39,7 @@ pipeline{
         
         stage("deployment files"){
             steps{
-                sh """
-                sed -i "s|\(image:\s*\).*|\1attarismail/springboot:${DOCKER_TAG}|" \
-                java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                """
+                sh "sed -i "s|\(image:\s*\).*|\1attarismail/springboot:${DOCKER_TAG}|" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
             }
         }
     }
