Update deployment image to version e8787f462a01b94d47275eaf22531c1fb7188e82

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: attarismail/springboot:replaceImageTag
+        image: attarismail/springboot:e8787f462a01b94d47275eaf22531c1fb7188e82
         ports:
         - containerPort: 8080
