--- a/.github/workflows/cicd.yaml.yml
+++ b/.github/workflows/cicd.yaml.yml
@@ -1,1 +1,10 @@
-
+name: My First Action
+ 
+on: [push]   # Runs whenever you push to GitHub
+ 
+jobs:
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Say Hello
+        run: echo "Hello, Ismail! GitHub Actions is working 🎉"
