--- a/.github/workflows/cicd.yaml.yml
+++ b/.github/workflows/cicd.yaml.yml
@@ -8,3 +8,12 @@ jobs:
     steps:
       - name: Say Hello
         run: echo "Hello, Ismail! GitHub Actions is working 🎉"
+
+ jobs:
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+        -name: show files
+         run: ls -R
