--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,11 +4,22 @@ on: [push]
 
 jobs:
 
-  checkout:
+  mvn build:
 
     runs-on: ubuntu-latest
 
     steps:
+    - name: code checkout
     - uses: actions/checkout@v4
-    - name: list files
-      run: ls -lrth
+    - name: install java mvn
+    - uses: actions/setup-java@v4
+      with:
+      distribution: 'temurin'
+      java-version: '17'
+    - name: build with maven
+      run: |
+        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+        mvn clean package
+      
+      
+
