--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,18 +4,18 @@ on: [push]
 
 jobs:
 
-  mvn build:
+  mvn_build:
 
     runs-on: ubuntu-latest
 
     steps:
     - name: code checkout
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
     - name: install java mvn
-    - uses: actions/setup-java@v4
+      uses: actions/setup-java@v4
       with:
-      distribution: 'temurin'
-      java-version: '17'
+        distribution: 'temurin'
+        java-version: '17'
     - name: build with maven
       run: |
         cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
