--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
         mvn clean package
+        ls -lrth 
       
       
 
