--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: my-jar
-        path: target/*.jar
+        path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar
 
   
       
