--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,36 +1,34 @@
-name: My first cicd
-
+name: my cicd pipeline
 on: [push]
 
 jobs:
-
-  mvn_build:
-
-    runs-on: ubuntu-latest
-
+  build-with-maven:
+    runs-on: ubuntu:latest
+    steps:  
+      - name: checkout
+        uses: actions/checkout@v4
+      - name: jdk install
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '21'
+      - name: build with maven
+        run: |
+          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+          mvn clean package
+      - name: upload the artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
+          path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar
+  download-the-artifact:
+    runs-on: ubuntu:latest
     steps:
-    - name: code checkout
-      uses: actions/checkout@v4
-    - name: install java mvn
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-    - name: build with maven
-      run: |
-        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-        mvn clean package
-        cd target
-        ls -lrth
-    - name: upload the artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: my-jar
-        path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar
+      - name: download the artifact
+        uses: actions/download-artifact@v5
+        with:
+          name: app-jar
+          path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
 
-  
-      
 
-      
-      
 
