--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
-          java-version: '17'
+          java-version: '21'
       - name: build with maven
         run: |
           cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
@@ -21,3 +21,20 @@ jobs:
         with:
           name: app-jar
           path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar
+  download-the-artifact:
+    runs-on: ubuntu:latest
+    needs: build-with-maven
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4        
+      - name: download the artifact
+        uses: actions/download-artifact@v5
+        with:
+          name: app-jar
+          path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
+          run: |
+            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
+            ls -lrth
+
+
+
