--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
           name: app-jar
           path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar
   download-the-artifact:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     needs: build-with-maven
     steps:
       - name: checkout
@@ -32,9 +32,6 @@ jobs:
         with:
           name: app-jar
           path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
-          run: |
-            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
-            ls -lrth
 
 
 
