--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,27 +15,23 @@ jobs:
       - name: build with maven
         run: |
           cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-          mvn clean package
+          mvn -B clean package
       - name: upload the artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-jar
           path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar
-  download-the-artifact:
-    runs-on: ubuntu-latest
-    needs: build-with-maven
-    steps:
-      - name: checkout
-        uses: actions/checkout@v4        
-      - name: download the artifact
-        uses: actions/download-artifact@v5
+      - name: sonarqube scan
+        uses: SonarSource/sonarqube-scan-action@v4.0.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+
+      - name: sonarqube qwality checkout
+        id: sonarqube qwality checkout        
+        uses: sonarsource/sonarqube-quality-gate-action@master
         with:
-          name: app-jar
-          path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
-      - name: validate target
-        run: |
-          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
-          ls -lrth 
-
-
-
+          pollingTimeoutSec: 600
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
