--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/sonar-project.properties
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0
 sonar.sources=src
 
 # Compiled classes (binaries)
-sonar.java.binaries=target
+sonar.java.binaries=target/classes
 
 # Encoding
 sonar.sourceEncoding=UTF-8
