--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,9 @@ jobs:
           path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar
       - name: sonarqube scan
         uses: SonarSource/sonarqube-scan-action@v5.0.0
+        with:
+          args: >
+            -Dproject.settings=java-maven-sonar-argocd-helm-k8s/spring-boot-app/sonar-project.properties
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
@@ -35,22 +38,3 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
-  
-  download-the-artifact:
-    runs-on: ubuntu-latest
-    needs: build-with-maven
-    steps:
-      - name: checkout
-        uses: actions/checkout@v4        
-      - name: download the artifact
-        uses: actions/download-artifact@v5
-        with:
-          name: app-jar
-          path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
-      - name: validate target
-        run: |
-          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
-          ls -lrth 
-
-
-
