--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/sonar-project.properties
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/sonar-project.properties
@@ -3,11 +3,11 @@ sonar.projectKey=my-spring-boot-app
 sonar.projectName=Spring Boot App
 sonar.projectVersion=1.0
 
-# Source code location
-sonar.sources=src
+# Source code location (use full relative path from repo root)
+sonar.sources=java-maven-sonar-argocd-helm-k8s/spring-boot-app/src
 
 # Compiled classes (binaries)
-sonar.java.binaries=target
+sonar.java.binaries=java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
 
 # Encoding
 sonar.sourceEncoding=UTF-8
