--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,3 +38,22 @@ jobs:
         with:
           name: app-jar
           path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar
+  
+  download-the-artifact:
+    runs-on: ubuntu-latest
+    needs: build-with-maven
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4        
+      - name: download the artifact
+        uses: actions/download-artifact@v5
+        with:
+          name: app-jar
+          path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
+      - name: validate target
+        run: |
+          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
+          ls -lrth 
+
+
+
