--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,9 +39,10 @@ jobs:
           name: app-jar
           path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar
   
-  download-the-artifact:
+
+  build-and-push-image-to-dockerhub:
     runs-on: ubuntu-latest
-    needs: build-with-maven
+    needs: download-the-artifact
     steps:
       - name: checkout
         uses: actions/checkout@v4        
@@ -50,10 +51,16 @@ jobs:
         with:
           name: app-jar
           path: java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
-      - name: validate target
+      - name: Build Docker image
         run: |
-          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app/target
-          ls -lrth 
-
-
-
+          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+          run: docker build -t myapp:${{ github.sha }} .
+      - name: login to docker 
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: push to dockerhub
+        run: docker push myapp:${{ github.sha }}
+        
+       
