--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,7 +42,7 @@ jobs:
 
   build-and-push-image-to-dockerhub:
     runs-on: ubuntu-latest
-    needs: download-the-artifact
+    needs: build-with-maven
     steps:
       - name: checkout
         uses: actions/checkout@v4        
@@ -64,3 +64,5 @@ jobs:
         run: docker push myapp:${{ github.sha }}
         
        
+
+
