--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,15 +2,16 @@ pipeline{
     agent any
     environment{
         DOCKER_TAG = getDockerTag()
+        
     }
     stages{
-        stage("commit check"){
+        stage("code checkout"){
             steps{
                 git branch: 'main', credentialsId: 'github', url: 'https://github.com/devops-ismailattar/Jenkins--cicd-pipeline.git'
             }
         }
-        
-        stage("maven build"){
+
+        stage("mvn build"){
             steps{
                 sh """
                 cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
@@ -20,57 +21,33 @@ pipeline{
         }
 
         stage("static code analysis"){
-            environment{
-                SONAR_URL = "http://13.232.204.134:9000"
-
-            }
             steps{
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                    sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
-                }
-            }
-        }
-        
-        stage("docker build image"){
-            // builing image with docker
-            steps{
-                sh "cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t attarismail/springboot:${DOCKER_TAG} ."
-            }
-        }
-        
-        stage("docker image push"){
-            steps{
-                withCredentials([string(credentialsId: 'docker-cred', variable: 'dockerHubPassword')]) {
-                   sh """
-                   docker login -u attarismail -p ${dockerHubPassword}
-                   docker push attarismail/springboot:${DOCKER_TAG}
-                   """
-                }
-            }
-        }
-        
-        stage("update deployment yaml"){
-            steps{
-                sh "sed -i 's|image: attarismail/springboot:.*|image: attarismail/springboot:${DOCKER_TAG}|' java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
-            }
-        }
-        
-        stage("commit changes to github"){
-            environment {
-                GIT_REPO_NAME = "Jenkins--cicd-pipeline"
-                GIT_USER_NAME = "devops-ismailattar"
-            }
-            steps{
-                withCredentials([string(credentialsId: 'github-creds', variable: 'GITHUB_TOKEN')]) {
                     sh """
-                    git config user.email "ismail.xyz@gmail.com"
-                    git config user.name "ismail attar"
-                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${DOCKER_TAG}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    cd cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
                     """
                 }
-                
+            }
+        }
+
+        stage("docker build image"){
+            steps{
+                sh """
+                cd cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                docker push attarismail/springboot:${DOCKER_TAG}
+                """
+            }
+        }
+
+        stage("docker push image"){
+            steps{
+                withCredentials([string(credentialsId: 'docker-cred\'', variable: 'dockerHubPassword')]) {
+                    sh """
+                    docker login -u attarismail -p ${dockerHubPassword}
+                    docker push attarismail/springboot:${DOCKER_TAG}
+                    """
+                }
             }
         }
     }
