--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,7 +2,7 @@ pipeline{
     agent any
     environment{
         DOCKER_TAG = getDockerTag()
-        
+        SONAR_URL = "http://13.201.52.196:9000/"
     }
     stages{
         stage("code checkout"){
