--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -24,7 +24,7 @@ pipeline{
             steps{
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
                     sh """
-                    cd cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    cd  java-maven-sonar-argocd-helm-k8s/spring-boot-app
                     mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
                     """
                 }
