--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -24,7 +24,7 @@ pipeline{
             steps{
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
                     sh """
-                    cd  java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    cd cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
                     mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
                     """
                 }
@@ -34,8 +34,8 @@ pipeline{
         stage("docker build image"){
             steps{
                 sh """
-                cd  java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                docker push attarismail/springboot:${DOCKER_TAG}
+                cd cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                docker build -t attarismail/springboot:${DOCKER_TAG} .
                 """
             }
         }
